--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
